objects/MasterdataCustomPicklist__mdt.object
<CustomObject>
    <fields>
        <fullName>ControlingFieldFilter__c</fullName>
        <label>Controling Field Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldFilter__c</fullName>
        <label>FieldFilter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterdataGlobalValueSet__c</fullName>
        <label>Masterdata Global Value Set</label>
        <referenceTo>MasterdataGlobalValueSet__mdt</referenceTo>
        <relationshipLabel>Masterdata Custom Picklists</relationshipLabel>
        <relationshipName>MasterdataCustomPicklists</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SalesforceControlingFieldName__c</fullName>
        <label>Salesforce Controling Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceFieldDeveloperName__c</fullName>
        <label>Salesforce Field Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceObjectDeveloperName__c</fullName>
        <label>Salesforce Object Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Masterdata Custom Picklist</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>IsActive__c</columns>
        <columns>DeveloperName</columns>
        <columns>SalesforceObjectDeveloperName__c</columns>
        <columns>SalesforceFieldDeveloperName__c</columns>
        <columns>SalesforceControlingFieldName__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Masterdata Custom Picklists</pluralLabel>
</CustomObject>